# z-renderer-c

./: .clangd  CMakeLists.txt  README.md  build.bat  build.sh  fragment.frag  todo.md  vertex.vert
examples/: dvd.c
shaders/: fragment.frag  modelfrag.frag  modelvert.vert  vertex.vert
src/: camera.c  camera.h  input.c  input.h  main.c  model.c  model.h  renderer.c  renderer.h  util.c  util.h  window.c  window.h
test/: main.c  objtest.c  test.bat
toolchain/: toolchain-linux.cmake  toolchain-mingw.cmake
win/: build.bat
